tests/fixtures/invalid/pow_dict_float_dict.py
# Cannot call pow() with Dict[str, int], Float, Dict[str, int]
x = pow({"a": 1}, 1.0, {"a": 1})
